--- a/templates/search/index.html.twig
+++ b/templates/search/index.html.twig
@@ -35,7 +35,11 @@
     {% endif %}
 
     <section>
+        {% if products %}
         <p>Showing {{ from }} to {{ to }} of {{ total }} products.</p>
+        {% else %}
+        <p>Found 0 products.</p>
+        {% endif %}
     </section>
 
     <section>
